
Don't create output directories in setup functions, it's handled by stageFiles
now.

Don't put L1test in GPLtools pythonpath.

Run high-priority jobs at 75 instead of 100, and make it a symbolic parameter.

Work on LSF host balancing.  Still not used.

Add (not yet used) fileNamesNew module which will replace fileNames, procDirs,
and balance.

-------------------------------------------

1.31 2008/01/26 OrbSim1, TVAC Opp ETE
-----------------
Common v2r5p1
FastMon v2r5p1
Monitor dp20080125

Make and export LS-001 (merit lite) files.

Switch to new fileNames module:
New version scheme.
All staged files assigned to random-but-repeatable disk.
Exported files are created with the proper name in the first place.
Merge input files are predicted rather than scanned.

Do downlink cleanup (just ft2Fake for now).

Do cal EOR and trending.

Run runStrip with -z option for recon & digi, but not for cal.
compileRunStrip supplies nonexistant input files.

Code cleanup.

-------------------------------------------

1.32 Reprocess most OrbSim1 runs
-----------------
ScienceTools v9r4p1
Common v2r9p0
FastMon v2r7p0
Monitor dp20080207_v2
ft2Util v1r1p30
EngineeringModelRoot v3r10p1 (For a while. Not sure since when.)

Use LSF host balancing with glastcobs,glastyilis. Doesn't seem to do much.
Move pipeline module to GPLtools.
Use glastdataq for everything.
Require sufficient scratch space.  Don't have good examples for all types.
Import config before GPLinit so logging works.
Don't use -z with runStrip.
Set environment variables (except LD_LIB...) in config, not XML.
Put a switch in config to disable cleanup.
Eliminate RUN_RAWDIR variable.
Make a minimum crumb size of 2500.

-------------------------------------------

1.33
-----------------
Common v2r10p0
FastMon v2r8p0

Crumble digi file.
Run svacTuple at crumb level.
Supply proper VERSION keyword for ls1, ls2.
Set disk space requirements to a minimum of 1GB.
Launch ASP when all FT[12] in a downlink are registered.